# 8085emulator

./: CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  README.md
.github/workflows/: test.yml
.zed/: settings.json
examples/: add_16_bit.s  add_16_bit_with_add_and_adc  add_16bit_with_dad  add_8_bit  add_8_bit.s  add_memory_contents  ana  cma  cmp  daa  example  large_number.s  loop.s  ora  square_of_given_number.s  subtract_8_bit.s  sum_of_even_numbers.s
src/: cpu.rs  lib.rs  main.rs  memory.rs  parser.rs  token.rs
src/core/: application.rs  assembler.rs  cpu.rs  mod.rs  parser.rs  syntax_highlighting.rs  token.rs
src/gui/: application.rs  memory.rs  mod.rs  registers.rs
src/tests/: addition.rs  comparison.rs  mod.rs  subtraction.rs
