[package]
name = "emulator-8085"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui_extras = { version = "0.23.0", features=["svg"] }
env_logger = "0.10.0"
image = "0.25.1"
logos = "0.13.0"
rfd = "0.14.1"
